--- a/01-CSS/CSS-Positioning/homework/homework.css
+++ b/01-CSS/CSS-Positioning/homework/homework.css
@@ -6,7 +6,7 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 1: Centrar el texto en un span */
 
 /* Arrancaremos este ejercicio por vos: */
-#ejercicioUno {
+#ejercicioUno { display: block; text-align: center;
 
 }
 
@@ -14,25 +14,38 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
+#ejercicioDos {display: none;}
 
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
+#ejercicioTres {position: relative; margin: 100px 0px 0px 200px;}
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
-
+#ejercicioCuatro {position: fixed;
+  top: 0;
+  left: 0;
+text-align: left;}
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-
+#ejercicioCinco {display: flex;
+    justify-content:space-between;
+    align-items: center;
+    flex-direction: row-reverse;}
 
 
 /* Ejercicio 6. */
+#ejercicioSiete {display: flex;
+    position: static;
+    justify-content:space-between;
+    align-items: center;
+    flex-direction: column;}
+    
