tarea revisada,homeworkcss

--- a/01-CSS/CSS-Positioning/homework/homework.css
+++ b/01-CSS/CSS-Positioning/homework/homework.css
@@ -6,7 +6,9 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 1: Centrar el texto en un span */
 
 /* Arrancaremos este ejercicio por vos: */
-#ejercicioUno { display: block; text-align: center;
+#ejercicioUno { 
+  display: block;
+  text-align: center;
 
 }
 
@@ -14,36 +16,42 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-#ejercicioDos {display: none;}
+#ejercicioDos {
+  display: none;}
 
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-#ejercicioTres {position: relative; margin: 100px 0px 0px 200px;}
+#ejercicioTres {
+  position: relative; 
+  margin: 100px 0px 0px 200px;}
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
-#ejercicioCuatro {position: fixed;
+#ejercicioCuatro {
+  position: fixed;
   top: 0;
   left: 0;
-text-align: left;}
+  text-align: left;}
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-#ejercicioCinco {display: flex;
-    justify-content:space-between;
+#ejercicioCinco {
+    display: flex;
+    justify-content:space-evenly;
     align-items: center;
     flex-direction: row-reverse;}
 
 
 /* Ejercicio 6. */
-#ejercicioSiete {display: flex;
+#ejercicioSiete {
+    display: flex;
     position: static;
     justify-content:space-between;
     align-items: center;
